<resources>
    <string name="titulo_menu">Memoria\n y\n Azar</string>
    <string name="texto_jugar">Jugar</string>
    <string name="texto_ayuda">Ayuda</string>
    <string name="texto_movimientos">Movimientos: 0</string>
    <string name="texto_movimiento_archivo">Movimientos: </string>
    <string name="texto_menu">Menu</string>
    <string name="text_Puntaje">Puntaje: </string>
    <string name="text_Salir">Salir</string>
    <string name="text_Records">Records</string>
    <string name="NuevoRecord">lograste un nuevo record, sigue asi!</string>
    <string name="text_perdedor">Perdiste, exediste la cantidad maxima de movimientos permitidos.</string>

    <string name="texto_salir">Salir</string>
    <string name="texto_salirDialogo">¿Estas seguro que queres salir?</string>
    <string name="texto_cancel">Cancelar</string>


    <string name="texto_compartir">compartir</string>
    <string name="texto_TituloCompartir">Gane el juego Memoria y Azar!</string>
    <string name="texto_spam">probalo vos tambien!</string>

    <string name="texto_saludo">Ingresar nombre</string>
    <string name="texto_Aceptar">Aceptar</string>
    <string name="texto_Bienvenido">Bienvenido</string>

    <string name="texto_ranking">Clasificación</string>
    <string name="texto_felicidades">Felicidades!</string>
    <string name="texto_ganaste_con1">Completaste el juego con: </string>
    <string name="texto_ganaste_con2">movimientos, </string>
    <string name="texto_ganaste_con3">y una tasa de aciertos del</string>

    <string name="texto_reiniciar">Reiniciar</string>
    <string name="info_ayuda">¡Bienvenido a Memoria y Azar! Aquí tienes una explicación detallada de cómo jugar: \n\n
1) El objetivo del juego es encontrar todos los pares de cartas que tengan el mismo valor.\n
2) Para comenzar, selecciona la opción `Jugar´ en el menú principal.\n
3) Verás un conjunto de cartas boca abajo en la pantalla.\n
4) Tu objetivo es voltearlas y recordar su ubicación.\n
5) Toca una carta para revelarla.\n
6) Recuerda el valor de la carta para encontrar su pareja.\n
7) Toca otra carta para revelarla.\n
8) Si el valor coincide con la carta anteriormente volteada, has encontrado un par.\n
9) Si los valores no coinciden, las cartas se voltearán de nuevo y deberás recordar su ubicación para futuros intentos.\n
10) Continúa volteando cartas y buscando pares hasta que hayas encontrado todos.\n\n
Una vez que hayas encontrado todos los pares, habrás completado el juego y obtendrás una puntuación basada en tu rendimiento.\n
Para cambiar el nombre de usuario solo toque el nombre en la pantalla de Menu principal.</string>
    <string name="texto_volver">Volver</string>

</resources>