<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/fondodesenfocado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:padding="5dp"
        android:typeface="serif"
        android:id="@+id/movimientosTextView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/shape"
        android:text="@string/texto_movimientos"
        android:textSize="25dp"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/botonRanking2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape"
            android:src="@android:drawable/ic_dialog_map" />

        <ImageButton
            android:id="@+id/botonAyuda2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/shape"
            android:src="@android:drawable/ic_menu_info_details" />

        <TextView
            android:typeface="serif"
            android:id="@+id/MejorRecord"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/botonerrado"
            android:text="Record: "
            android:textColor="@color/white"
            android:textSize="20dp"
            android:padding="5dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <GridLayout
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:useDefaultMargins="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:background="@drawable/shape"
            android:typeface="serif"
            android:soundEffectsEnabled="false"
            android:id="@+id/botonMenu"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/texto_menu"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <Button
            android:layout_marginTop="5dp"
            android:background="@drawable/shape"
            android:typeface="serif"
            android:soundEffectsEnabled="false"
            android:id="@+id/reiniciarButton"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/texto_reiniciar"
            android:textSize="15sp"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>
